# fashia-backend-api

./: .gitignore  Dockerfile  README.md  config.py  controllers.py  main.py  models.py  pyproject.toml  requirements.txt  sql_index.sql  supabase_client.py
alembic/: env.py
app/: config.py  main.py  start.sh
app/api/v1/: deps.py
app/api/v1/endpoints/: items.py
app/controllers/: controller.py  helper_functions.py
app/crud/: item.py
app/db/: db_query.py  session.py
app/models/: employer_model.py  entity.py  facility_model.py  facility_request.py  item.py  provider_model.py
app/request_model/: employer_request.py  provider_request.py
app/services/: get_employer_data.py  get_facilities_data.py  get_provider_data.py  sql_lite_service.py
app/utils/: pagination.py
